homelab/templates/delegation-nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: delegation-nginx
spec:
  tls:
    - secretName: "le-cert"
  rules:
    - host: sethpyle.com
      http:
        paths:
          - path: /.well-known/matrix/
            pathType: Prefix
            backend:
              service:
                name: delegation-nginx
                port:
                  number: 80
